# securemark-tls

./: .gitmodules  LICENSE.md  README.md
examples/selfhosted/: CMakeLists.txt  README.md  keys.h  main.c
examples/selfhosted/cmake/: splint.cmake
examples/selfhosted/profile/mbedtls_th_api/: .th_ecdh.c.swo  .th_ecdsa.c.swp  th_aes.c  th_chachapoly.c  th_ecdh.c  th_ecdsa.c  th_rsa.c  th_sha.c  th_util.c  th_util.h
examples/selfhosted/profile/mbedtls_th_api/redist/mbedtls/: config.h  mbedtls_config.h
examples/selfhosted/profile/mbedtls_th_api/redist/mbedtls-3.0.0/include/mbedtls/: mbedtls_config.h
examples/selfhosted/profile/psa_crypto_th_api/: th_aes.c  th_ecdh.c  th_ecdsa.c  th_sha.c  th_util.c  th_util.h
examples/selfhosted/profile/psa_crypto_th_api/redist/mbedtls/include/mbedtls/: mbedtls_config.h
examples/selfhosted/profile/psa_crypto_th_api/redist/mbedtls/include/psa/: crypto_config.h
examples/selfhosted/profile/psa_th_api/: th_aes.c  th_ecdh.c  th_ecdsa.c  th_sha.c  th_util.c  th_util.h
examples/selfhosted/profile/th_api/: th_aes.c  th_chachapoly.c  th_ecdh.c  th_ecdsa.c  th_sha.c  th_util.c  th_util.h
examples/selfhosted/profile/th_api/redist/mbedtls-3.0.0/include/mbedtls/: mbedtls_config.h
examples/selfhosted/profile/wolfssl_th_api/: .th_aes.c.swp  .th_ecdh.c.swo  .th_ecdh.c.swp  .th_ecdsa.c.swp  th_aes.c  th_chachapoly.c  th_ecdh.c  th_ecdsa.c  th_rsa.c  th_sha.c  th_util.c  th_util.h
examples/selfhosted/visualc/sec-tls/: sec-tls.vcxproj
monitor/: ee_main.c  ee_main.h
monitor/th_api/: th_lib.c  th_lib.h  th_libc.c  th_libc.h
profile/: ee_aes.c  ee_aes.h  ee_bench.c  ee_bench.h  ee_buffer.c  ee_buffer.h  ee_chachapoly.c  ee_chachapoly.h  ee_ecdh.c  ee_ecdh.h  ee_ecdsa.c  ee_ecdsa.h  ee_ed25519.c  ee_ed25519.h  ee_profile.c  ee_profile.h  ee_random.c  ee_random.h  ee_rsa.c  ee_rsa.h  ee_sha.c  ee_sha.h  ee_util.c  ee_util.h  ee_variations.c  ee_variations.h
profile/th_api/: th_aes.c  th_chachapoly.c  th_ecdh.c  th_ecdsa.c  th_ed25519.c  th_rsa.c  th_sha.c  th_util.c  th_util.h
